Add '24w18a' sources